--- a/app/src/main/res/layout/fragment_appointment.xml
+++ b/app/src/main/res/layout/fragment_appointment.xml
@@ -55,7 +55,9 @@
             android:layout_height="55dp"
             android:hint="@string/date"
             android:layout_marginTop="130dp"
-            android:layout_marginStart="30dp"/>
+            android:layout_marginStart="30dp"
+            android:textStyle="bold"
+            android:textSize="18dp"/>
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="350dp"
@@ -116,7 +118,9 @@
             android:layout_height="55dp"
             android:layout_marginTop="480dp"
             android:layout_marginStart="145dp"
-            android:text="@string/submit">
+            android:text="@string/submit"
+            android:textSize="18dp"
+            android:textStyle="bold">
 
         </Button>
 
