--- a/app/src/main/res/layout/fragment_photos.xml
+++ b/app/src/main/res/layout/fragment_photos.xml
@@ -42,7 +42,11 @@
             android:layout_marginLeft="210dp"
             android:textStyle="bold"
             android:textSize="17dp"
-            >
+            android:textColor="#333333"
+            android:shadowColor="#C0C0C0"
+            android:shadowRadius="3"
+            android:shadowDy="2"
+            android:shadowDx="2">
 
         </TextView>
 
@@ -73,7 +77,12 @@ especially with the looming threat of the deadly parvovirus lurking around every
             android:textStyle="bold"
             android:layout_marginTop="375dp"
             android:textSize="17dp"
-            android:layout_marginLeft="10dp">
+            android:layout_marginLeft="10dp"
+            android:textColor="#333333"
+            android:shadowColor="#C0C0C0"
+            android:shadowDx="2"
+            android:shadowDy="2"
+            android:shadowRadius="3">
 
         </TextView>
         <TextView
