--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -34,7 +34,7 @@
             android:textSize="20dp"
             android:textColor="#000000"
             android:text="Welcome to MojiVet!"
-            android:textStyle="bold"
+            android:textStyle="italic"
             android:layout_marginLeft="20dp">
 
         </TextView>
@@ -45,7 +45,7 @@ veterinary excellence"
             android:layout_width="280dp"
             android:layout_height="wrap_content"
             android:textSize="16dp"
-            android:textStyle="bold"
+            android:textStyle="italic"
             android:textColor="#000000"
             android:layout_marginTop="260dp"
             android:layout_marginLeft="20dp">
