cleaned activity_forgot_password.xml removed unnecessary views on xml to lessen the app load
Signed-off-by: Jamessysystem <smenardjames@gmail.com>

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -6,37 +6,28 @@
     android:orientation="vertical"
     tools:context=".profiling.ForgotPassword">
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="70dp"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/mojivet"
         android:gravity="center"
+        android:layout_marginTop="60dp"
         android:textSize="60sp"/>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="15dp"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/forgot_password"
         android:gravity="center"
+        android:layout_marginTop="30dp"
         android:textSize="25sp"/>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="130dp"/>
-
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="350dp"
         android:layout_height="55dp"
         android:hint="@string/email"
         android:layout_marginStart="30dp"
+        android:layout_marginTop="130dp"
         android:textAlignment="viewStart">
 
         <com.google.android.material.textfield.TextInputEditText
