login,signup,forgot pass, appointment

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".profiling.ForgotPassword"
-    android:background="@drawable/headerbg">
+    android:background="@drawable/vetbg">
 
     <View
         android:layout_width="match_parent"
@@ -58,9 +58,9 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/textborder1"
             android:drawableStart="@drawable/baseline_email_24"
-            android:drawablePadding="10dp"
-            android:background="@drawable/text_border"/>
+            android:drawablePadding="10dp" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
