--- a/app/src/main/res/layout/fragment_appointment.xml
+++ b/app/src/main/res/layout/fragment_appointment.xml
@@ -45,7 +45,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/text_border"/>
+                android:background="@drawable/textborder1"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -70,7 +70,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/text_border"/>
+                android:background="@drawable/textborder1"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -85,7 +85,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/text_border"/>
+                android:background="@drawable/textborder1"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -109,7 +109,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/text_border"/>
+                android:background="@drawable/textborder1"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
