maya ko na tapusin dol lipat muna ako pang retrofit
Signed-off-by: Jamessysystem <smenardjames@gmail.com>

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -4,16 +4,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".profiling.ForgotPassword"
-    android:background="@drawable/vetbg">
+    tools:context=".profiling.ForgotPassword">
 
-    <View
+    <ImageView
         android:layout_width="match_parent"
-        android:layout_height="70dp"/>
+        android:layout_height="match_parent"
+        android:src="@drawable/vetbg"
+        android:scaleType="centerCrop"/>
+
     <TextView
         android:id="@+id/textViewTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="-600dp"
         android:text="@string/mojivet"
         android:gravity="center"
         android:textSize="50sp"
@@ -23,10 +26,6 @@
         android:shadowDx="2"
         android:shadowDy="2"
         android:shadowRadius="3"/>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="15dp"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -43,16 +42,12 @@
         android:shadowDy="2"
         android:shadowColor="#C0C0C0"/>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="130dp"/>
-
-
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="350dp"
         android:layout_height="55dp"
         android:hint="@string/email"
         android:layout_marginStart="30dp"
+        android:layout_marginTop="100dp"
         android:textAlignment="viewStart">
 
         <com.google.android.material.textfield.TextInputEditText
