--- a/app/src/main/res/layout/fragment_about_us.xml
+++ b/app/src/main/res/layout/fragment_about_us.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".nav_bottom.Appointment"
+    tools:context=".nav_drawer.About_us"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
@@ -24,8 +24,8 @@
             android:shadowDx="2"
             android:shadowRadius="3"/>
 
-
     </androidx.cardview.widget.CardView>
+
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="match_parent">
