--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,31 +3,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".nav_bottom.Appointment"
+    tools:context=".nav_bottom.Home"
     android:id="@+id/home"
     android:orientation="vertical">
-
-    <!-- TODO: Update blank fragment layout -->
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="60dp">
 
         <ImageView
             android:src="@drawable/beauty"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:scaleType="centerCrop"
             android:contentDescription="@string/dog">
-
         </ImageView>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="240dp"
+            android:layout_marginTop="-500dp"
             android:textSize="20sp"
             android:textColor="#000000"
             android:text="@string/welcome_to_mojivet"
@@ -38,14 +29,13 @@
         <TextView
             android:text="@string/schedule_your_pet_s_appointment_easily_and_experience_tailored_veterinary_excellence"
             android:layout_width="280dp"
-            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_height="80dp"
             android:textSize="16sp"
             android:textStyle="bold"
             android:textColor="#000000"
-            android:layout_marginTop="260dp"
+            android:fontFamily="sans-serif"
             android:layout_marginStart="20dp">
-
         </TextView>
 
-    </androidx.cardview.widget.CardView>
 </LinearLayout>
