--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,19 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:gravity="center"
-    tools:context=".profiling.Signup"
-    android:background="@drawable/vetbg">
+    tools:context=".profiling.Login">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clickable="false"
+        android:focusable="false"
+        android:scaleType="centerCrop"
+        android:src="@drawable/vetbg"
+        android:contentDescription="@string/cats_and_dogs"/>
 
     <TextView
         android:id="@+id/textViewTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/mojivet"
+        android:layout_marginTop="80dp"
         android:gravity="center"
         android:textSize="50sp"
         android:textColor="#333333"
@@ -22,6 +30,12 @@
         android:shadowDx="2"
         android:shadowDy="2"
         android:shadowRadius="3"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textViewTitle"
+        android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
@@ -38,61 +52,49 @@
         android:shadowDy="2"
         android:shadowColor="#C0C0C0"/>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="40dp"/>
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
+        android:hint="@string/email"
+        android:layout_gravity="center">
 
-
-
-        <LinearLayout
+        <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="30dp">
+            android:inputType="textEmailAddress"
+            android:background="@drawable/textborder1"
+            android:drawableStart="@drawable/baseline_email_24"
+            android:drawablePadding="10dp"/>
+    </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/email">
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:hint="@string/password"
+        app:startIconDrawable="@drawable/baseline_lock_24"
+        app:endIconMode="password_toggle"
+        app:errorEnabled="true"
+        app:errorIconDrawable="@null"
+        android:layout_gravity="center"
+        android:layout_marginTop="15dp">
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="textEmailAddress"
-                    android:background="@drawable/textborder1"
-                    android:textStyle="bold"/>
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/password"
-                android:layout_marginTop="10dp">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="textPassword"
-                    android:background="@drawable/textborder1"
-                    android:textStyle="bold"/>
-            </com.google.android.material.textfield.TextInputLayout>
-
-        </LinearLayout>
-
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="35dp"/>
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:background="@drawable/textborder1"
+            android:textStyle="bold"/>
+    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:layout_width="300dp"
         android:layout_height="60dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
         android:text="@string/sign_up"
-        android:textSize="20sp" />
+        android:textSize="20sp"/>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="40dp"/>
 
     <androidx.cardview.widget.CardView
         android:layout_width="300dp"
@@ -130,5 +132,6 @@
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
+    </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
