--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -7,29 +7,29 @@
         android:checkableBehavior="single">
 
         <item
-            android:id="@+id/nav_profile"
-            android:icon="@drawable/baseline_person_24"
-            android:title="Profile"/>
+            android:id="@+id/nav_home"
+            android:icon="@drawable/baseline_home_24"
+            android:title="@string/home"/>
 
         <item
-            android:id="@+id/nav_veterinarian"
-            android:icon="@drawable/doctor_icon"
-            android:title="Veterinarian"/>
+            android:id="@+id/nav_profile"
+            android:icon="@drawable/baseline_person_24"
+            android:title="@string/profile"/>
 
         <item
             android:id="@+id/nav_photos"
             android:icon="@drawable/baseline_image_24"
-            android:title="Photos"/>
+            android:title="@string/photos"/>
 
         <item
             android:id="@+id/nav_contact_us"
             android:icon="@drawable/baseline_call_24"
-            android:title="Contact Us"/>
+            android:title="@string/contact_us"/>
 
         <item
             android:id="@+id/nav_about_us"
             android:icon="@drawable/baseline_info_24"
-            android:title="About Us"/>
+            android:title="@string/about_us"/>
     </group>
 
     <item
@@ -40,7 +40,7 @@
             <item
                 android:id="@+id/nav_logout"
                 android:icon="@drawable/baseline_logout_24"
-                android:title="Logout"/>
+                android:title="@string/logout"/>
         </menu>
     </item>
 </menu>
