--- a/app/src/main/res/layout/fragment_contact_us.xml
+++ b/app/src/main/res/layout/fragment_contact_us.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:fillViewport="true"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context=".profiling.Signup"
-    android:background="@drawable/gradient_yellow"
-    android:layout_marginTop="-30dp">
+    tools:context=".nav_drawer.Contact_us">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="240dp"
@@ -151,7 +154,6 @@
             android:contentDescription="@string/instagram"/>
 
     </LinearLayout>
+    </LinearLayout>
 
-
-
-</LinearLayout>
+</ScrollView>
