--- a/app/src/main/res/layout/fragment_appointment.xml
+++ b/app/src/main/res/layout/fragment_appointment.xml
@@ -1,131 +1,141 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".nav_bottom.Appointment"
     android:gravity="center"
-    android:orientation="vertical">
-
-    <!-- TODO: Update blank fragment layout -->
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-    <TextView
-
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="@string/create_an_appointment"
-        android:layout_marginTop="50dp"
-        android:textSize="28sp"
-        android:layout_gravity="center_horizontal"
-        android:textColor="#333333"
-        android:textStyle="bold"
-        android:shadowDx="2"
-        android:shadowDy="2"
-        android:shadowColor="#C0C0C0"
-        android:shadowRadius="3"/>
-
-    </androidx.cardview.widget.CardView>
-
+    android:orientation="vertical"
+    android:fillViewport="true">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="350dp"
-            android:layout_height="55dp"
-            android:hint="@string/name"
-            android:layout_marginTop="60dp"
-            android:layout_marginStart="30dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <com.google.android.material.textfield.TextInputEditText
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/textborder1"/>
+                android:layout_marginTop="30dp"
+                android:gravity="center"
+                android:shadowColor="#C0C0C0"
+                android:shadowDx="2"
+                android:shadowDy="2"
+                android:shadowRadius="3"
+                android:text="@string/create_appointment"
+                android:textColor="#333333"
+                android:textSize="28sp"
+                android:textStyle="bold" />
 
-        </com.google.android.material.textfield.TextInputLayout>
 
-        <Button
-            android:id="@+id/spin_date"
-            android:layout_width="350dp"
-            android:layout_height="55dp"
-            android:hint="@string/date"
-            android:layout_marginTop="130dp"
-            android:layout_marginStart="30dp"
-            android:textStyle="bold"
-            android:textSize="18sp"/>
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="320dp"
+                android:layout_height="55dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="30dp"
+                android:hint="@string/name">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="350dp"
-            android:layout_height="55dp"
-            android:hint="@string/pet_name"
-            android:layout_marginTop="200dp"
-            android:layout_marginStart="30dp"
-            android:textAlignment="viewStart">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/textborder1"
+                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz" />
 
-            <com.google.android.material.textfield.TextInputEditText
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="320dp"
+                android:layout_height="55dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:hint="@string/email">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/textborder1"
+                    android:inputType="textEmailAddress" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <Button
+                android:id="@+id/spin_date"
+                android:layout_width="320dp"
+                android:layout_height="55dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:hint="@string/date"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <Spinner
+                android:id="@+id/spin_time"
+                android:layout_width="320dp"
+                android:layout_height="55dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"/>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="320dp"
+                android:layout_height="55dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:hint="@string/pet_name">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/textborder1"
+                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <Spinner
+                android:id="@+id/spin_pettype"
+                android:layout_width="320dp"
+                android:layout_height="55dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"/>
+
+            <Spinner
+                android:id="@+id/spin_vet"
+                android:layout_width="320dp"
+                android:layout_height="55dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:text="@string/choose_veterinarian"/>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="320dp"
+                android:layout_height="55dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:hint="@string/concern">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/textborder1" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <Button
+                android:layout_width="130dp"
+                android:layout_height="55dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:text="@string/submit"
+                android:textSize="18sp"
+                android:textStyle="bold"/>
+
+            <View
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/textborder1"/>
+                android:layout_height="90dp" />
 
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="350dp"
-            android:layout_height="55dp"
-            android:hint="@string/pet_type"
-            android:layout_marginTop="270dp"
-            android:layout_marginStart="30dp"
-            android:textAlignment="viewStart">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/textborder1"/>
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <Spinner
-            android:id="@+id/spin_vet"
-            android:text="@string/choose_veterinarian"
-            android:layout_width="350dp"
-            android:layout_height="55dp"
-            android:layout_marginTop="340dp"
-            android:layout_gravity="center">
-        </Spinner>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="350dp"
-            android:layout_height="55dp"
-            android:hint="@string/concern"
-            android:layout_marginTop="410dp"
-            android:layout_marginStart="30dp"
-            android:textAlignment="viewStart">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/textborder1"/>
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <Button
-            android:layout_width="130dp"
-            android:layout_height="55dp"
-            android:layout_marginTop="480dp"
-            android:layout_marginStart="145dp"
-            android:text="@string/submit"
-            android:textSize="18sp"
-            android:textStyle="bold">
-
-        </Button>
-
+        </LinearLayout>
     </androidx.cardview.widget.CardView>
-
-
-</LinearLayout>
+</ScrollView>
 
