--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -46,4 +46,12 @@
             android:layout_marginStart="20dp">
         </TextView>
 
+        <Button
+            android:id="@+id/bookappt"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:layout_margin="20dp"
+            android:text="@string/book_an_appointment"/>
+
+
 </LinearLayout>
