--- a/app/src/main/res/layout/fragment_photos.xml
+++ b/app/src/main/res/layout/fragment_photos.xml
@@ -1,122 +1,141 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".nav_drawer.Photos"
+    android:fillViewport="true"
     android:orientation="vertical">
 
-    <!-- TODO: Update blank fragment layout -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="30dp"
         android:gravity="center"
-        android:text="Photos"
-        android:textSize="20dp"
+        android:text="@string/photos"
+        android:textSize="20sp"
         android:textStyle="bold"
         android:textColor="#333333"
         android:shadowDx="2"
         android:shadowDy="2"
         android:shadowRadius="3"
         android:shadowColor="#C0C0C0"/>
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        <LinearLayout
+            android:id="@+id/linear1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:orientation="horizontal">
 
             <ImageView
-                android:layout_width="200dp"
-                android:layout_height="190dp"
+                android:id="@+id/imageView"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:src="@drawable/chihuahuahua"
-                android:layout_marginTop="30dp">
-
+                android:contentDescription="@string/dog">
             </ImageView>
 
+            <TextView
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:text="@string/max_survived_from_parvo"
+                android:layout_margin="20dp"
+                android:layout_gravity="center"
+                android:textStyle="bold"
+                android:textSize="18sp"
+                android:textColor="#333333"
+                android:shadowColor="#C0C0C0"
+                android:shadowRadius="3"
+                android:shadowDy="2"
+                android:shadowDx="2"/>
+        </LinearLayout>
 
-        <TextView
-            android:layout_width="200dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Max survived from parvo"
-            android:layout_marginTop="40dp"
-            android:layout_marginLeft="210dp"
-            android:textStyle="bold"
-            android:textSize="17dp"
-            android:textColor="#333333"
-            android:shadowColor="#C0C0C0"
-            android:shadowRadius="3"
-            android:shadowDy="2"
-            android:shadowDx="2">
+            android:orientation="vertical"
+            android:layout_below="@id/linear1"
+            android:layout_margin="20dp">
 
-        </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/max1"
+                android:textSize="14sp"/>
 
-        <TextView
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="210dp"
-            android:layout_marginTop="65dp"
-            android:text="Life in Parvoopolis was tough for a stray dog like Max,
-especially with the looming threat of the deadly parvovirus lurking around every corner. But max was determined to survive, his spirit unbroken despited the hardships he faced."
-            android:textSize="15dp">
-
-        </TextView>
-        <TextView
-            android:text="One fateful day, as Max was scavenging for food in a run- down alley, he encountered a group of other dogs who had fallen victim to the ravages of parvovirus. They were weak and emaciated, their once-glossy coats now dull and matted with filth. Max knew he had to do something to help them, but he also knew that he was risking his own life by staying in such close proximity to the infected dogs."
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="230dp"
-            android:textSize="15dp"
-            android:layout_marginLeft="10dp">
-
-        </TextView>
-        <TextView
-            android:text="Luna survived from
-                                                  Bacteria infection"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:layout_marginTop="375dp"
-            android:textSize="17dp"
-            android:layout_marginLeft="10dp"
-            android:textColor="#333333"
-            android:shadowColor="#C0C0C0"
-            android:shadowDx="2"
-            android:shadowDy="2"
-            android:shadowRadius="3">
-
-        </TextView>
-        <TextView
-            android:text="
-Life in Whisker Hollow was idyllic, with the townsfolk going about their days in peaceful harmony. Luna spent her time exploring the nooks and crannies of"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="420dp"
-            android:layout_marginLeft="10dp"
-            android:textSize="15dp">
-
-        </TextView>
-        <ImageView
-            android:layout_width="180dp"
-            android:layout_height="250dp"
-            android:src="@drawable/catmeow"
-            android:layout_marginTop="340dp"
-            android:layout_marginLeft="215dp">
-
-        </ImageView>
-        <TextView
-            android:text="
-
-the town, basking in the warmth of the sun and chasing after butterflies in the meadows. However, one day, tragedy struck when Luna fell ill with a severe bacterial infection. The normally lively cat became lethargic and weak, her once-shiny coat now dull and unkempt. The townsfolk were devastated by Luna's plight, fearing that they might lose their beloved feline friend."
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="530dp"
-            android:textSize="15dp"
-            android:layout_marginLeft="10dp">
-
-        </TextView>
-
-
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_gravity="center"
+                android:layout_height="wrap_content"
+                android:text="@string/max2"
+                android:textSize="14sp"/>
+        </LinearLayout>
+        </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <LinearLayout
+                    android:id="@+id/linear2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_margin="20dp">
+                    <ImageView
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:src="@drawable/catmeow"
+                        android:contentDescription="@string/cat">
+                    </ImageView>
 
-</LinearLayout>
+                    <TextView
+                        android:text="@string/luna_survived_from_bacteria_infection"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="20dp"
+                        android:layout_gravity="center"
+                        android:textStyle="bold"
+                        android:textSize="18sp"
+                        android:textColor="#333333"
+                        android:shadowColor="#C0C0C0"
+                        android:shadowDx="2"
+                        android:shadowDy="2"
+                        android:shadowRadius="3"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_below="@id/linear2"
+                    android:layout_margin="20dp">
+                    <TextView
+                        android:text="@string/luna_details"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="15sp"/>
+                </LinearLayout>
+            </RelativeLayout>
+    </androidx.cardview.widget.CardView>
+    </LinearLayout>
+</ScrollView>
