--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -11,20 +11,21 @@
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:src="@drawable/icon"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:src="@drawable/navigationlogo"
+        android:layout_marginTop="20dp"
         android:layout_marginBottom="8dp"
         android:contentDescription="@string/logo">
     </ImageView>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/logo"
-        android:layout_marginStart="5dp"
-        android:text="@string/mojivet"
-        android:textColor="@android:color/black"
-        android:textSize="14sp"/>
+<!--    <TextView-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_below="@+id/logo"-->
+<!--        android:layout_marginStart="5dp"-->
+<!--        android:text="@string/mojivet"-->
+<!--        android:textColor="@android:color/black"-->
+<!--        android:textSize="14sp"/>-->
 
 </RelativeLayout>
