--- a/app/src/main/res/layout/fragment_contact_us.xml
+++ b/app/src/main/res/layout/fragment_contact_us.xml
@@ -42,16 +42,13 @@
                 android:textStyle="bold"
                 android:layout_gravity="center"/>
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="35dp"/>
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:gravity="center"
                 android:padding="20dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
                 android:background="@drawable/textborder1">
 
