--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,6 +8,7 @@
     android:orientation="vertical">
 
         <ImageView
+            android:id="@+id/home_pic"
             android:src="@drawable/beauty"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -16,15 +17,21 @@
         </ImageView>
 
         <View
+            android:layout_alignParentStart="@+id/home_pic"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#80000000"
-            android:layout_marginTop="-800dp"/>
+            android:background="#80000000"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="center_vertical">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="-500dp"
+            android:layout_marginTop="10dp"
             android:textSize="24sp"
             android:textColor="#FFFFFF"
             android:letterSpacing=".05"
@@ -52,6 +59,7 @@
             android:layout_height="50dp"
             android:layout_margin="20dp"
             android:text="@string/book_an_appointment"/>
+        </LinearLayout>
 
 
-</LinearLayout>
+</RelativeLayout>
