--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -58,7 +58,8 @@
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:layout_margin="20dp"
-            android:text="@string/book_an_appointment"/>
+            android:text="@string/book_an_appointment"
+            android:backgroundTint="@color/lavender"/>
         </LinearLayout>
 
 
