--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -98,6 +98,19 @@
                         android:layout_height="wrap_content"
                         android:inputType="textPassword"/>
                 </com.google.android.material.textfield.TextInputLayout>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/forgot_pass1"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:textStyle="bold"
+                    android:textSize="18sp"
+                    android:textColor="@color/bright_blue"
+                    android:gravity="end"
+                    android:layout_marginEnd="10dp"/>
+
+
         <Button
         android:id="@+id/btnLogin"
         android:layout_width="300dp"
@@ -134,7 +147,8 @@
                 android:gravity="center"
                 android:text="@string/dhaveacc"
                 android:textSize="17sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:layout_marginEnd="3dp"/>
 
             <TextView
                 android:id="@+id/sign_uphere"
@@ -145,7 +159,8 @@
                 android:focusable="true"
                 android:textSize="16sp"
                 android:textColor="@color/bright_blue"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:layout_marginEnd="2dp"/>
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
