--- a/app/src/main/res/layout/fragment_contact_us.xml
+++ b/app/src/main/res/layout/fragment_contact_us.xml
@@ -139,7 +139,7 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_margin="10dp"
-            android:src="@drawable/fb"
+            android:src="@drawable/fb1"
             android:layout_gravity="center"
             android:contentDescription="@string/facebook"/>
 
